# pyrituals

./: .gitignore  LICENSE  README.md  setup.cfg
pyrituals/: __init__.py
