[metadata]
name = pyrituals
version = 0.0.3
url = https://github.com/milanmeu/pyrituals
author = Milan Meulemans
author_email = milan.meulemans@live.be
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = Async Python wrapper for the Rituals Perfume Genie API
long_description = file: README.md
long_description_content_type = text/markdown
keywords = rituals, perfume, genie
project_urls =
    Say Thanks! = https://saythanks.io/to/milan.meulemans@live.be
    Bug Tracker = https://github.com/milanmeu/pyrituals/issues
    Source Code = https://github.com/milanmeu/pyrituals
    Documentation = https://github.com/milanmeu/pyrituals/blob/main/README.md

[options]
packages = find:
install_requires =
    aiohttp
python_requires = >=3.8