[metadata]
name = pyrituals
version = 0.0.6
url = https://github.com/milanmeu/pyrituals
author = Milan Meulemans
author_email = milan.meulemans@live.be
maintainer = Milan Meulemans
maintainer_email = milan.meulemans@live.be
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
description = Async Python wrapper for the Rituals Perfume Genie API
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
license_file = LICENSE
keywords = rituals, perfume, genie
project_urls =
    Say Thanks! = https://saythanks.io/to/milan.meulemans@live.be
    Bug Tracker = https://github.com/milanmeu/pyrituals/issues
    Source Code = https://github.com/milanmeu/pyrituals
    Documentation = https://github.com/milanmeu/pyrituals/blob/main/README.md

[options]
packages = find:
install_requires =
    aiohttp
python_requires = >=3.8
include_package_data = True

[options.package_data]
pyrituals = py.typed
